# VirtualVisionRemote

./: CMakeLists.txt  OpenCV_2.4.10_Raspbian_Install.txt  VirtualVision.cpp  startup  startup.sh  v4l2_Raspicam_Install.txt
BuildScripts/: build_x64.bat  build_x86.bat
PupilTracker/: CMakeLists.txt  swirski_main.cpp  swirski_main.cpp~
